<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/main_tab_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:text="@string/home_page" />

    <TextView
        android:id="@+id/main_tab_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:text="@string/ward_choose" />

    <TextView
        android:id="@+id/main_tab_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:text="@string/patient_choose" />

    <TextView
        android:id="@+id/main_tab_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center_horizontal"
        android:text="@string/exit" />

</LinearLayout>



